# AmiVikings2

./: .gitignore  CMakeLists.txt  README.md  TODO  heightmap_gen.py  map1_heightmap.txt
doc/: data_outside_packed_container.md  tech_info.md
src/asset_extract/: asset_extract.cpp  bitmap.cpp  bitmap.h  constexpr_std.hpp  ehb.cpp  glyph_set.cpp  palette.h  rgb.h  rle_table.hpp  rom_metadata.cpp  rom_metadata.hpp  vector_reader.hpp
src/game/: ami_vikings_2.c  ami_vikings_2.cpp  assets.c  assets.cpp  assets.h  assets.hpp  bob_new.c  bob_new.h  entity.c  entity.h  entity_erik.c  entity_erik.h  hud.c  hud.cpp  hud.h  hud.hpp  item.c  item.cpp  item.h  item.hpp  lost_vikings_2.c  player.c  player.h  player_controller.c  player_controller.cpp  player_controller.h  player_controller.hpp  state_game.c  state_game.cpp  state_game.h  state_game.hpp  steer.c  steer.cpp  steer.h  steer.hpp  tile.c  tile.cpp  tile.h  tile.hpp
src/game/dialogue/: boxed_message.hpp  dialogue.cpp  dialogue.hpp  msg_pos_flag.hpp
src/game/entity/: entity.c  entity.cpp  entity.h  entity.hpp  entity_baelog.cpp  entity_baelog.hpp  entity_erik.c  entity_erik.cpp  entity_erik.h  entity_erik.hpp  entity_info_box.cpp  entity_info_box.hpp  entity_olaf.cpp  entity_olaf.hpp  entity_viking.c  entity_viking.cpp  entity_viking.h  entity_viking.hpp
src/py_tools/: extract_texts.py  find_sequence.py  heightmap_gen.py  level_compose.py  map1_heightmap.txt
src/py_tools/common/: find_path.py
